--- a/index.html
+++ b/index.html
@@ -4,74 +4,22 @@
     <meta charset="UTF-8" />
   </head>
   <style>
-    :root {
-      --size: 30px;
-      --color: #000;
-      --duration: 2s;
-    }
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    img {
-      width: 100px;
-    }
-    span {
-      width: var(--size);
-      height: calc(var(--size) / 4);
-      position: relative;
-      display: block;
-    }
-    div {
-      width: calc(var(--size) / 4);
-      height: calc(var(--size) / 4);
-      position: absolute;
-      left: 0%;
-      top: 0;
-      border-radius: 2px;
-      background: var(--color);
-      transform: translateX(-50%) rotate(45deg) scale(0);
-      animation: diamonds var(--duration) linear infinite;
-    }
-    div:nth-child(1) {
-      animation-delay: calc(var(--duration) * 2 / 3 * -1);
-    }
-    div:nth-child(2) {
-      animation-delay: calc(var(--duration) * 2 / 3 * -2);
-    }
-    div:nth-child(3) {
-      animation-delay: calc(var(--duration) * 2 / 3 * -3);
-    }
-    p {
-      margin-top: 40px;
-      margin-bottom: 20px;
-      font-size: 12pt;
-      font-style: italic;
-      font-family: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
-    }
-
-    @keyframes diamonds {
-      50% {
-        left: 50%;
-        transform: translateX(-50%) rotate(45deg) scale(1);
-      }
-      100% {
-        left: 100%;
-        transform: translateX(-50%) rotate(45deg) scale(0);
-      }
-    }
+    @import url('./assets/index.css');
   </style>
   <body>
-    <img src="./assets/logo.png" alt="logo" />
-    <p>Starting Application</p>
-    <span>
-      <div></div>
-      <div></div>
-      <div></div>
-    </span>
+    <header>
+      <div id="arrows">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="arrow-disabled"><path d="M18 15h-6v4l-7-7 7-7v4h6v6z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="arrow-disabled"><path d="M6 9h6V5l7 7-7 7v-4H6V9z"/></svg>
+      </div>
+      <img src="./assets/logo.png" alt="logo" class="header-logo" />
+    </header>
+    <div id="loader" style="display: none;">
+      <img src="./assets/logo.png" alt="logo" class="logo" />
+      <p class="loading-info">Starting Application</p>
+      <span class="diamond-span"><div class="diamond"></div><div class="diamond"></div><div class="diamond"></div></span>
+    </div>
+    <webview class="maybe-view" style="display: none;"></webview>
   </body>
+  <script type="module" src="src/renderer.ts"></script>
 </html>
